--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </aside>
   <hgroup class="auto-fadein">
     <h1>Large Scale Learning in R</h1>
-    <h2></h2>
+    <h2>wush978.github.io/phorum-R-201406</h2>
     <p>Wush Wu<br/>Taiwan R User Group</p>
   </hgroup>
   <article></article>  
