--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
 <!-- html table generated in R 3.0.3 by xtable 1.7-3 package -->
 
-<!-- Thu May 22 21:49:11 2014 -->
+<!-- Sat May 24 00:24:55 2014 -->
 
 <TABLE border=1>
 <TR> <TH>  </TH> <TH> is_click </TH> <TH> show_time </TH> <TH> client_ip </TH> <TH> adid </TH>  </TR>
@@ -178,7 +178,7 @@
   <article data-timings="">
     <!-- html table generated in R 3.0.3 by xtable 1.7-3 package -->
 
-<!-- Thu May 22 21:49:11 2014 -->
+<!-- Sat May 24 00:24:55 2014 -->
 
 <TABLE border=1>
 <TR> <TH>  </TH> <TH> is_click </TH> <TH> show_time </TH> <TH> client_ip </TH> <TH> adid </TH>  </TR>
@@ -290,7 +290,7 @@
 <article class = 'flexbox vcenter'>
 <p>請使用和其他工具一樣的資料結構:</p>
 
-<p>這種狀況，應該使用稀疏矩阵</p>
+<p>這種狀況，應該使用<code>稀疏矩阵</code></p>
 
 </article>
 <!-- Presenter Notes -->
@@ -300,32 +300,37 @@
   
 </hgroup>
 <div style='float:left;width:48%;' class='flexbox vcenter'>
-  <pre><code class="r">library(Matrix); data(KNex)
-class(KNex$mm)[1]
-</code></pre>
+  <h2>稀疏矩陣</h2>
 
-<pre><code>[1] &quot;dgCMatrix&quot;
-</code></pre>
+<ul>
+<li>只儲存非0的資訊</li>
+</ul>
 
-<pre><code class="r">object.size(KNex$mm)
-</code></pre>
-
-<pre><code>109336 bytes
+<pre><code class="r">n &lt;- 1
+m1 &lt;- matrix(0, 10^n, 10^n);m1[1, 4] &lt;- 1
+c(m1)
+library(Matrix)
+m2 &lt;- Matrix(0, 10^n, 10^n, sparse=TRUE)
+m2[1,4] &lt;- 1
+str(m2)
 </code></pre>
 
 </div>
 <div style='float:right;width:48%;' class='flexbox vcenter'>
-  <pre><code class="r">mm &lt;- as(KNex$mm, &quot;matrix&quot;)
-class(mm)
+  <pre><code>  [1] 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+ [48] 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+ [95] 0 0 0 0 0 0
 </code></pre>
 
-<pre><code>[1] &quot;matrix&quot;
-</code></pre>
-
-<pre><code class="r">object.size(mm)
-</code></pre>
-
-<pre><code>10537968 bytes
+<pre><code>Formal class &#39;dgCMatrix&#39; [package &quot;Matrix&quot;] with 6 slots
+  ..@ i       : int 0
+  ..@ p       : int [1:11] 0 0 0 0 1 1 1 1 1 1 ...
+  ..@ Dim     : int [1:2] 10 10
+  ..@ Dimnames:List of 2
+  .. ..$ : NULL
+  .. ..$ : NULL
+  ..@ x       : num 1
+  ..@ factors : list()
 </code></pre>
 
 </div>
@@ -339,7 +344,7 @@ class(mm)
 
 <p>大概可以省下 \(10^2 \sim 10^3\) 倍記憶體</p>
 
-<p><code>並且可以大幅加快運算效能</code></p>
+<p>而且可以大幅度加快運算效能!</p>
 
 </article>
 <!-- Presenter Notes -->
@@ -349,23 +354,11 @@ class(mm)
   
 </hgroup>
 <article class = 'flexbox vcenter'>
-<p>還可用<code>Rcpp</code>實做矩陣-向量的乘法</p>
+<p>如果<code>m1</code>, <code>m2</code>是 \(10^4 \times 10^4\) 的矩陣:</p>
 
-<p>我們的實作(C的部分)和BLAS庫比較：</p>
-
-<pre><code>nnz = 1.000000e+06, rows = 1.000000e+05, cols = 1.000000e+03, 
-density = 1.000000e-02, times = 100, nr_threads = 1
-generating data...done 453ms
-CSR Xv:  388ms
-CSR XTv: 288ms
-CSR X^TDXv: 488ms
-CSR X^TDXv (ACC): 367ms
-CSR Xv (MKL):  468ms
-CSR XTv (MKL): 482ms
-CSR X^TDXv (MKL): 529ms
-CSR Xv (NIST):  398ms
-CSR XTv (NIST): 461ms
-error: 0.000000
+<pre><code>      test replications elapsed relative user.self sys.self user.child sys.child
+1 m1 %*% r          100  21.690      868    47.727    0.217          0         0
+2 m2 %*% r          100   0.025        1     0.021    0.003          0         0
 </code></pre>
 
 </article>
@@ -376,9 +369,9 @@ error: 0.000000
   
 </hgroup>
 <article class = 'flexbox vcenter'>
-<p>利用<code>Rcpp</code>將C的實作暴露到R中</p>
+<p>可以利用<code>Rcpp</code>將C的實作暴露到R中</p>
 
-<p>利用<code>Rcpp</code>做記憶體的重複使用</p>
+<p>可以利用<code>Rcpp</code>做記憶體的重複使用</p>
 
 </article>
 <!-- Presenter Notes -->
@@ -388,11 +381,24 @@ error: 0.000000
   
 </hgroup>
 <article class = 'flexbox vcenter'>
-<p>再透過<code>pbdMPI</code>開發分散式矩陣乘法</p>
+<pre><code>                test replications elapsed relative user.self sys.self user.child sys.child
+1           m2 %*% r          100   0.023     7.67     0.021    0.002          0         0
+2 XTv(m2, r, retval)          100   0.003     1.00     0.002    0.000          0         0
+</code></pre>
 
-<p>利用更多CPU和更多記憶體提升效能</p>
+<p>在現代的Rcpp架構下</p>
 
-<p>\[\left(\begin{array}{c}X_1 \\ X_2\end{array}\right) w = \left(\begin{array}{c}X_1 w \\ X_2 w\end{array}\right)\]</p>
+<p>將C++函數放到R中變得很簡單</p>
+
+<p>我們只需要專注在演算法上</p>
+
+<pre><code class="cpp">#include &lt;Rcpp.h&gt;
+using namespace Rcpp;
+// [[Rcpp::export]]
+SEXP XTv(S4 m, NumericVector v) {
+  //...
+}
+</code></pre>
 
 </article>
 <!-- Presenter Notes -->
@@ -402,12 +408,59 @@ error: 0.000000
   
 </hgroup>
 <article class = 'flexbox vcenter'>
-<p><code>pbdMPI</code>是<a href="http://r-pbd.org/">pbdR(Programming with Big Data in R)</a>專案的套件之一</p>
+<p>再透過<code>pbdMPI</code>開發分散式矩陣乘法</p>
+
+<p>利用更多CPU和更多記憶體提升效能</p>
 
 </article>
 <!-- Presenter Notes -->
 </slide>
 <slide class="large" id="slide-22">
+<hgroup>
+  
+</hgroup>
+<article class = 'flexbox vcenter'>
+<p>\[\left(\begin{array}{c}X_1 \\ X_2\end{array}\right) v = \left(\begin{array}{c}X_1 v \\ X_2 v\end{array}\right)\]</p>
+
+<p>\[\left(v_1 , v_2\right) \left(\begin{array}{c}X_1 \\ X_2\end{array}\right) = v_1 X_1 + v_2 X_2\]</p>
+
+</article>
+<!-- Presenter Notes -->
+</slide>
+<slide class="large" id="slide-23">
+<hgroup>
+  
+</hgroup>
+<div style='float:left;width:48%;' class='flexbox vcenter'>
+  <h2>MPI</h2>
+
+<h3>記憶體足夠的話，較快</h3>
+
+<h3>沒有容錯</h3>
+
+</div>
+<div style='float:right;width:48%;' class='flexbox vcenter'>
+  <h2>Hadoop</h2>
+
+<h3>慢，要大量機器才有效果</h3>
+
+<h3>有容錯</h3>
+
+</div>
+</slide>
+<slide class="large" id="slide-24">
+<hgroup>
+  
+</hgroup>
+<article class = 'flexbox vcenter'>
+<p><code>pbdMPI</code>是<a href="http://r-pbd.org/">pbdR(Programming with Big Data in R)</a>專案的套件之一</p>
+
+<p><img src="assets/img/pbdMPI.png" class="fit50" /></p>
+
+</article>
+<!-- Presenter Notes -->
+</slide>
+<slide class="large" id="slide-25">
 <hgroup>
   
 </hgroup>
@@ -430,18 +483,18 @@ finalize()
 
 </div>
 </slide>
-<slide class="large" id="slide-23">
+<slide class="large" id="slide-26">
 <hgroup>
   
 </hgroup>
 <div style='float:left;width:48%;' class='flexbox vcenter'>
   <h2>最佳化演算法</h2>
 
-<h3>快速</h3>
+<h3>迭代次數少</h3>
 
 <h3>不用計算Hessian矩陣</h3>
 
-<h3>很棒的實作<a href="http://www.csie.ntu.edu.tw/%7Ecjlin/liblinear/">LIBLINEAR</a></h3>
+<h3>已有很棒的實作<a href="http://www.csie.ntu.edu.tw/%7Ecjlin/liblinear/">LIBLINEAR</a></h3>
 
 </div>
 <div style='float:right;width:48%;' class='flexbox vcenter'>
@@ -449,7 +502,7 @@ finalize()
 
 </div>
 </slide>
-<slide class="large" id="slide-24">
+<slide class="large" id="slide-27">
 <hgroup>
   
 </hgroup>
@@ -463,7 +516,7 @@ finalize()
 </article>
 <!-- Presenter Notes -->
 </slide>
-<slide class="large" id="slide-25">
+<slide class="large" id="slide-28">
 <hgroup>
   <h2>LIBLINEAR 原始碼中的 <code>tron.h</code></h2>
 </hgroup>
@@ -491,7 +544,7 @@ private:
 </article>
 <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-26">
+<slide class="" id="slide-29">
 <hgroup>
   <h2>界面：<code>function</code></h2>
 </hgroup>
@@ -517,7 +570,7 @@ public:
 </article>
 <!-- Presenter Notes -->
 </slide>
-<slide class="large" id="slide-27">
+<slide class="large" id="slide-30">
 <hgroup>
   <h2>利用<code>Rcpp Modules</code>把<code>function</code>暴露到R中</h2>
 </hgroup>
@@ -555,7 +608,7 @@ SEXP tron//...
 
 </div>
 </slide>
-<slide class="large" id="slide-28">
+<slide class="large" id="slide-31">
 <hgroup>
   
 </hgroup>
@@ -590,7 +643,7 @@ print(r &lt;- obj$tron(1e-4, TRUE))
 
 </div>
 </slide>
-<slide class="" id="slide-29">
+<slide class="" id="slide-32">
 <hgroup>
   
 </hgroup>
@@ -614,7 +667,7 @@ iter  8 act 9.416e-06 pre 7.823e-06 delta 4.186e-01 f 1.173e-05 |g| 8.019e-04 CG
 </article>
 <!-- Presenter Notes -->
 </slide>
-<slide class="large" id="slide-30">
+<slide class="large" id="slide-33">
 <hgroup>
   
 </hgroup>
@@ -639,7 +692,19 @@ hs &lt;- new(HsTrust, objective_function, ...)
 </article>
 <!-- Presenter Notes -->
 </slide>
-<slide class="large" id="slide-31">
+<slide class="large" id="slide-34">
+<hgroup>
+  
+</hgroup>
+<article class = 'flexbox vcenter'>
+<p>SPMD架構</p>
+
+<p><img src="assets/img/SPMD.png" class="fit100"/></p>
+
+</article>
+<!-- Presenter Notes -->
+</slide>
+<slide class="large" id="slide-35">
 <hgroup>
   
 </hgroup>
@@ -660,7 +725,7 @@ hs &lt;- new(HsTrust, objective_function, ...)
 </article>
 <!-- Presenter Notes -->
 </slide>
-<slide class="large" id="slide-32">
+<slide class="large" id="slide-36">
 <hgroup>
   
 </hgroup>
@@ -672,7 +737,7 @@ hs &lt;- new(HsTrust, objective_function, ...)
 </article>
 <!-- Presenter Notes -->
 </slide>
-<slide class="dark segue" id="slide-33" style="background:;">
+<slide class="dark segue" id="slide-37" style="background:;">
   <hgroup>
     <h2>資料越大，結果就會越好嗎？</h2>
   </hgroup>
@@ -682,7 +747,7 @@ hs &lt;- new(HsTrust, objective_function, ...)
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-34" style="background:;">
+<slide class="" id="slide-38" style="background:;">
   <article data-timings="">
     <p><img src="assets/img/datasize.png" class="fit100"/></p>
 
@@ -690,7 +755,7 @@ hs &lt;- new(HsTrust, objective_function, ...)
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="dark segue" id="slide-35" style="background:;">
+<slide class="dark segue" id="slide-39" style="background:;">
   <hgroup>
     <h2>不同的模型對預測會有影響嗎？</h2>
   </hgroup>
@@ -700,7 +765,7 @@ hs &lt;- new(HsTrust, objective_function, ...)
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="large" id="slide-36">
+<slide class="large" id="slide-40">
 <hgroup>
   
 </hgroup>
@@ -712,7 +777,7 @@ hs &lt;- new(HsTrust, objective_function, ...)
 </article>
 <!-- Presenter Notes -->
 </slide>
-<slide class="large" id="slide-37">
+<slide class="large" id="slide-41">
 <hgroup>
   
 </hgroup>
@@ -721,7 +786,7 @@ hs &lt;- new(HsTrust, objective_function, ...)
 
 <!-- html table generated in R 3.0.3 by xtable 1.7-3 package -->
 
-<!-- Thu May 22 21:49:14 2014 -->
+<!-- Sat May 24 00:24:55 2014 -->
 
 <TABLE border=1>
 <TR> <TH>  </TH> <TH> auc </TH> <TH> Regularization </TH> <TH> FeatureSet </TH> <TH> DayEffect </TH>  </TR>
@@ -748,7 +813,7 @@ hs &lt;- new(HsTrust, objective_function, ...)
 </article>
 <!-- Presenter Notes -->
 </slide>
-<slide class="large" id="slide-38">
+<slide class="large" id="slide-42">
 <hgroup>
   
 </hgroup>
@@ -759,7 +824,7 @@ hs &lt;- new(HsTrust, objective_function, ...)
 
 <!-- html table generated in R 3.0.3 by xtable 1.7-3 package -->
 
-<!-- Thu May 22 21:49:14 2014 -->
+<!-- Sat May 24 00:24:55 2014 -->
 
 <TABLE border=1>
 <TR> <TH>  </TH> <TH> row.names  Estimate </TH> <TH> Std. Error </TH> <TH> t value </TH> <TH> Pr(&gt;|t|) </TH>  </TR>
@@ -776,7 +841,7 @@ hs &lt;- new(HsTrust, objective_function, ...)
 </article>
 <!-- Presenter Notes -->
 </slide>
-<slide class="large" id="slide-39">
+<slide class="large" id="slide-43">
 <hgroup>
   
 </hgroup>
@@ -786,7 +851,7 @@ hs &lt;- new(HsTrust, objective_function, ...)
 </article>
 <!-- Presenter Notes -->
 </slide>
-<slide class="large" id="slide-40">
+<slide class="large" id="slide-44">
 <hgroup>
   
 </hgroup>
@@ -798,7 +863,7 @@ hs &lt;- new(HsTrust, objective_function, ...)
 </article>
 <!-- Presenter Notes -->
 </slide>
-<slide class="dark segue" id="slide-41" style="background:;">
+<slide class="dark segue" id="slide-45" style="background:;">
   <hgroup>
     <h2>其他的工程面分享</h2>
   </hgroup>
@@ -809,7 +874,7 @@ hs &lt;- new(HsTrust, objective_function, ...)
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="large" id="slide-42">
+<slide class="large" id="slide-46">
 <hgroup>
   
 </hgroup>
@@ -823,7 +888,7 @@ hs &lt;- new(HsTrust, objective_function, ...)
 </article>
 <!-- Presenter Notes -->
 </slide>
-<slide class="large" id="slide-43">
+<slide class="large" id="slide-47">
 <hgroup>
   
 </hgroup>
@@ -835,7 +900,7 @@ hs &lt;- new(HsTrust, objective_function, ...)
 </article>
 <!-- Presenter Notes -->
 </slide>
-<slide class="large" id="slide-44">
+<slide class="large" id="slide-48">
 <hgroup>
   
 </hgroup>
@@ -854,24 +919,25 @@ hs &lt;- new(HsTrust, objective_function, ...)
 </article>
 <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-45">
+<slide class="large" id="slide-49">
 <hgroup>
-  <h2>總結</h2>
+  
 </hgroup>
 <article class = 'flexbox vcenter'>
 <p>R 是可以對大量數據進行處理：</p>
 
-<ul>
-<li>使用<code>Matrix</code>套件的稀疏矩陣</li>
-<li><code>Rcpp</code>高效能的使用記憶體</li>
-<li><code>Rcpp</code>整合第三方的庫</li>
-<li><code>pbdMPI</code>建立分散式平行運算叢集</li>
-</ul>
+<h3>使用<code>Matrix</code>套件的稀疏矩陣</h3>
+
+<h3><code>Rcpp</code>高效能的使用記憶體</h3>
+
+<h3><code>Rcpp</code>整合第三方的庫</h3>
+
+<h3><code>pbdMPI</code>建立分散式平行運算叢集</h3>
 
 </article>
 <!-- Presenter Notes -->
 </slide>
-<slide class="large" id="slide-46">
+<slide class="large" id="slide-50">
 <hgroup>
   
 </hgroup>
@@ -885,7 +951,7 @@ hs &lt;- new(HsTrust, objective_function, ...)
 </article>
 <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-47">
+<slide class="large" id="slide-51">
 <hgroup>
   
 </hgroup>
@@ -1045,37 +1111,37 @@ hs &lt;- new(HsTrust, objective_function, ...)
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=25 title='LIBLINEAR 原始碼中的 <code>tron.h</code>'>
+        data-slide=25 title=''>
          25
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=26 title='界面：<code>function</code>'>
+        data-slide=26 title=''>
          26
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=27 title='利用<code>Rcpp Modules</code>把<code>function</code>暴露到R中'>
+        data-slide=27 title=''>
          27
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=28 title=''>
+        data-slide=28 title='LIBLINEAR 原始碼中的 <code>tron.h</code>'>
          28
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=29 title=''>
+        data-slide=29 title='界面：<code>function</code>'>
          29
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=30 title=''>
+        data-slide=30 title='利用<code>Rcpp Modules</code>把<code>function</code>暴露到R中'>
          30
       </a>
     </li>
@@ -1093,7 +1159,7 @@ hs &lt;- new(HsTrust, objective_function, ...)
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=33 title='資料越大，結果就會越好嗎？'>
+        data-slide=33 title=''>
          33
       </a>
     </li>
@@ -1105,7 +1171,7 @@ hs &lt;- new(HsTrust, objective_function, ...)
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=35 title='不同的模型對預測會有影響嗎？'>
+        data-slide=35 title=''>
          35
       </a>
     </li>
@@ -1117,7 +1183,7 @@ hs &lt;- new(HsTrust, objective_function, ...)
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=37 title=''>
+        data-slide=37 title='資料越大，結果就會越好嗎？'>
          37
       </a>
     </li>
@@ -1129,7 +1195,7 @@ hs &lt;- new(HsTrust, objective_function, ...)
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=39 title=''>
+        data-slide=39 title='不同的模型對預測會有影響嗎？'>
          39
       </a>
     </li>
@@ -1141,7 +1207,7 @@ hs &lt;- new(HsTrust, objective_function, ...)
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=41 title='其他的工程面分享'>
+        data-slide=41 title=''>
          41
       </a>
     </li>
@@ -1165,7 +1231,7 @@ hs &lt;- new(HsTrust, objective_function, ...)
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=45 title='總結'>
+        data-slide=45 title='其他的工程面分享'>
          45
       </a>
     </li>
@@ -1179,6 +1245,30 @@ hs &lt;- new(HsTrust, objective_function, ...)
       <a href="#" target="_self" rel='tooltip' 
         data-slide=47 title=''>
          47
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=48 title=''>
+         48
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=49 title=''>
+         49
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=50 title=''>
+         50
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=51 title=''>
+         51
       </a>
     </li>
   </ul>
