--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
 <!-- html table generated in R 3.0.3 by xtable 1.7-3 package -->
 
-<!-- Sun May 25 00:30:10 2014 -->
+<!-- Sun May 25 08:11:21 2014 -->
 
 <TABLE border=1>
 <TR> <TH>  </TH> <TH> is_click </TH> <TH> show_time </TH> <TH> client_ip </TH> <TH> adid </TH>  </TR>
@@ -188,7 +188,7 @@
   <article data-timings="">
     <!-- html table generated in R 3.0.3 by xtable 1.7-3 package -->
 
-<!-- Sun May 25 00:30:10 2014 -->
+<!-- Sun May 25 08:11:21 2014 -->
 
 <TABLE border=1>
 <TR> <TH>  </TH> <TH> is_click </TH> <TH> show_time </TH> <TH> client_ip </TH> <TH> adid </TH>  </TR>
@@ -416,7 +416,7 @@ str(m2)
 <pre><code class="cpp">#include &lt;Rcpp.h&gt;
 using namespace Rcpp;
 // [[Rcpp::export]]
-SEXP XTv(S4 m, NumericVector v) {
+SEXP XTv(S4 m, NumericVector v, NumericVector&amp; retval) {
   //...
 }
 </code></pre>
@@ -828,7 +828,7 @@ hs &lt;- new(HsTrust, objective_function, ...)
 
 <!-- html table generated in R 3.0.3 by xtable 1.7-3 package -->
 
-<!-- Sun May 25 00:30:10 2014 -->
+<!-- Sun May 25 08:11:24 2014 -->
 
 <TABLE border=1>
 <TR> <TH>  </TH> <TH> auc </TH> <TH> Regularization </TH> <TH> FeatureSet </TH> <TH> DayEffect </TH>  </TR>
@@ -867,7 +867,7 @@ hs &lt;- new(HsTrust, objective_function, ...)
 
 <!-- html table generated in R 3.0.3 by xtable 1.7-3 package -->
 
-<!-- Sun May 25 00:30:10 2014 -->
+<!-- Sun May 25 08:11:24 2014 -->
 
 <TABLE border=1>
 <TR> <TH>  </TH> <TH> row.names  Estimate </TH> <TH> Std. Error </TH> <TH> t value </TH> <TH> Pr(&gt;|t|) </TH>  </TR>
